Update the redirect url

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </noscript>
         <script>
             if (localStorage.getItem('airtag')) {
-                location.href = 'https://youtu.be/a3Z7zEc7AXQ';
+                location.href = 'https://www.youtube.com/watch?v=dQw4w9WgXcQ';
                 localStorage.removeItem('airtag');
             } else {
                 location.href =
